# rust-fcc

calculator/src/: main.rs
combiner/src/: args.rs  main.rs
forecast/: Cargo.toml
forecast/src/: main.rs
