[package]
name = "forecast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
structopt = "0.3.26"
reqwest = { features=["json"]}
tokio = { features = ["full"]}
tokio-compat = "0.1.6"
